--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ crossorigin>
 wght@0,200..800;1,200..800&display=swap"
 rel="stylesheet">
 
-<link rel="stylesheet" href="Style/Style.css">
+<link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
 <div id="banner-container">
